Cambios de estilo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Wilson Fernández: English Portfolio</title>
-        <meta name="description" content="The work done for my A1 English course at UNAD."/>
+        <meta name="description" content="This is the work done for my A1 English course at UNAD."/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <!-- Las siguientes etiquetas influyen en lo que se mostrará cuando comparta un enlace a su página 
             con alguien (a través de Facebook, Messenger, etc.), por lo general, se mostrará un contenido 
