Cambios de estilo

--- a/about-me.html
+++ b/about-me.html
@@ -29,7 +29,7 @@
                 </header>
             
             
-                <main class="page-content">
+                <main class="page-content-about-me">
 
                        <section class="my-photograph">
                         <img class="center" alt="Wilson's photograph"width="300px"src="img/wilson-foto.jpg">
