cambios de texto

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </main>   
                 
                 <footer>
-                   </br><p>© 2022. Foreign language acquisition portfolio. English A1 course. Created with Netlify.</p>
+                   </br><p>© 2022. Foreign language acquisition portfolio. English Course. Created with Netlify.</p>
                 </footer>
 
         </div>
