cambios de marcado

--- a/about-me.html
+++ b/about-me.html
@@ -55,7 +55,7 @@
                 </main> 
                 
                 <footer>
-                    </br><p>© 2022. Foreign language acquisition portfolio. English Course. Created with Netlify.</p>
+                    <p>© 2022. Foreign language acquisition portfolio. English Course. Created with Netlify.</p>
                 </footer>
 
         </div>
