--- a/about-me.html
+++ b/about-me.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Wilson Fernández: About Me</title>
-        <meta name="description" content="The work done for my A1 English course at UNAD."/>
+        <meta name="description" content="The work done for my English course at UNAD."/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta property="og:title" content="Wilson Fernández: About Me" />
         <meta property="og:description" content="A quick summary about who am I." />
