--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <head>
         <meta charset="utf-8"/>
         <title>Wilson Fernández: English Portfolio</title>
-        <meta name="description" content="This is the work done for my A1 English course at UNAD."/>
+        <meta name="description" content="This is the work done for my English course at UNAD."/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <!-- Las siguientes etiquetas influyen en lo que se mostrará cuando comparta un enlace a su página 
             con alguien (a través de Facebook, Messenger, etc.), por lo general, se mostrará un contenido 
             similar a una tarjeta corta con un título. , imagen y un breve contenido junto a la imagen     -->
         <meta property="og:title" content="Wilson Fernández: English Portfolio" />
-        <meta property="og:description" content="The work done for my A1 English course at UNAD." />
+        <meta property="og:description" content="The work done for my English course at UNAD." />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://fridnand.github.io/portafolio-de-ingles/" />
         <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Logo_unad_color.png/2560px-Logo_unad_color.png" />   
