--- a/task-2.html
+++ b/task-2.html
@@ -100,10 +100,10 @@
 
                         <ol>
                             <li>Sí, estudié y aprendí los temas sugeridos del E-book.</li>
-                            <li>Si, participe en el foro dentro de los tiempos indicados.</li>
+                            <li>Sí, participé en el foro dentro de los tiempos indicados.</li>
                             <li>Participé en el foro de esta tarea.</li>
                             <li>El desarrollo de un texto básico en inglés.</li>
-                            <li>Si, es importante. Porque es necesario tener unas buenas bases desde las cuales construir.</li>
+                            <li>Sí, es importante. Porque es necesario tener unas buenas bases desde las cuales construir.</li>
                             <li>Aporta mucho. No solamente a futuro en cuanto a oportunidades laborales sino también en el hecho de poder comenzar a acceder a información.</li>
                         </ol>
                         <p>Reflexión final: 
