--- a/task-4.html
+++ b/task-4.html
@@ -57,12 +57,11 @@
                     
                     <section class="stage-4">
                         <h2>Stage 4</h2>
-                        <a href="https://youtu.be/iHHQH4Jz8Bg">Presentación Oral en Inglés</a>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/iHHQH4Jz8Bg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <hr>
                     </section>   
 
                     <section class="espacios-de-aprendizaje">
-                        <hr>
                         <h2>Espacios de Aprendizaje</h2>
                         <img class="center2" alt="evidence of my participation" style= "width:50%;" src="img/espacio-de-aprendizaje.png">
                         <hr>
